--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -21,7 +21,7 @@ body {
   background: $support-color;
   font-family: $copy-font;
   //font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 18px; /*Base font size=18pt=24px
+  font-size: 18px; /*Base font size*/
   color: $copy-color; /*dark purple*/
 }
 header {
