--- a/_sass/styles.css
+++ b/_sass/styles.css
@@ -1272,8 +1272,9 @@ body {
   background: #FAF3FF;
   font-family: "Fauna One", serif;
   font-size: 18px;
-                 /*Base font size=18pt=24px
-color: $copy-color; /*dark purple*/ }
+  /*Base font size*/
+  color: #404952;
+  /*dark purple*/ }
 
 header {
   font-size: 1.5em;
