--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -22,11 +22,12 @@ body {
   font-family: $copy-font;
   //font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px; /*Base font size*/
-  color: $copy-color; /*dark purple*/
+  color: $copy-color; /*bluish black*/
 }
 header {
   font-size: 1.5em;
   font-family: $header-font;
+  color: $primary-color;
   padding-top: 2em;
 }
 .wrapper {
