--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -30,8 +30,10 @@ header {
   color: $primary-color;
   padding-top: 2em;
 }
-nav {
+nav a {
   text-decoration: none;
+  color: $primary-color;
+  padding-left: .3em;
 }
 .wrapper {
   margin: 0 auto 0 auto;
