--- a/_sass/styles.css
+++ b/_sass/styles.css
@@ -1273,8 +1273,7 @@ body {
   font-family: "Fauna One", serif;
   font-size: 18px;
   /*Base font size*/
-  color: #404952;
-  /*bluish black*/ }
+  color: #404952; }
 
 header {
   font-size: 1.9em;
@@ -1289,7 +1288,7 @@ nav {
 nav a {
   text-decoration: none;
   color: #624A73;
-  padding-left: .3em;
+  padding-left: 1em;
   display: inline-block; }
 
 .active-link {
