--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -31,7 +31,7 @@ body {
   font-family: $copy-font;
   //font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px; /*Base font size*/
-  color: $copy-color; /*bluish black*/
+  color: $copy-color; 
 }
 header {
   @include header-style;
@@ -43,8 +43,7 @@ nav {
 nav a {
   text-decoration: none;
   color: $primary-color;
-  padding-left: .3em;
-  //float: right;
+  padding-left: 1em;
   display: inline-block;
 }
 .active-link {
