added copy mixin

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin copy-style {
+  font-family: $copy-font;
+  //font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 18px; /*Base font size*/
+  color: $copy-color; 
+}
 @mixin header-style {
   font-size: 1.9em;
   font-family: $header-font;
