--- a/_sass/styles.css
+++ b/_sass/styles.css
@@ -1269,18 +1269,31 @@
   box-sizing: border-box; }
 
 body {
-  font-family: "Fauna One", serif;
+  font-family: "Bitter", serif;
   font-size: 18px;
   /*Base font size*/
   color: #404952;
   background: #FAF3FF; }
 
 header {
-  font-size: 1.9em;
+  font-size: 1.7em;
   font-family: "Pathway Gothic One", sans-serif;
   color: #624A73;
   text-transform: uppercase;
   padding-top: 2em; }
+
+section[role="summary"] {
+  padding: 6em 0 6em 0; }
+  section[role="summary"] p {
+    margin: 1em 0 1em 0; }
+
+h1 {
+  font-size: 1.7em;
+  font-family: "Pathway Gothic One", sans-serif;
+  color: #624A73;
+  text-transform: uppercase;
+  font-size: 3.7em;
+  font-weight: normal; }
 
 nav {
   text-align: right; }
@@ -1290,6 +1303,9 @@ nav a {
   color: #624A73;
   padding-left: 1em;
   display: inline-block; }
+
+.name {
+  font-size: 1.3em; }
 
 .active-link {
   color: #50AD9B; }
