--- a/_sass/styles.css
+++ b/_sass/styles.css
@@ -1283,9 +1283,9 @@ header {
   padding-top: 2em; }
 
 section[role="summary"] {
-  padding: 6em 0 6em 0; }
+  padding: 9em 0 9em 0; }
   section[role="summary"] p {
-    margin: 1em 0 1em 0; }
+    margin: 2em 0 2em 0; }
 
 h1 {
   font-size: 1.7em;
@@ -1293,6 +1293,14 @@ h1 {
   color: #624A73;
   text-transform: uppercase;
   font-size: 3.7em;
+  font-weight: normal; }
+
+h2 {
+  font-size: 1.7em;
+  font-family: "Pathway Gothic One", sans-serif;
+  color: #624A73;
+  text-transform: uppercase;
+  font-size: 2em;
   font-weight: normal; }
 
 nav {
@@ -1309,6 +1317,12 @@ nav a {
 
 .active-link {
   color: #50AD9B; }
+
+.works-list {
+  margin: 2em 0 0 0;
+  list-style-type: none; }
+  .works-list li {
+    padding-bottom: 2em; }
 
 .wrapper {
   margin: 0 auto 0 auto;
