--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -38,15 +38,20 @@ header {
   padding-top: 2em;
 }
 section[role="summary"] {
-  padding: 6em 0 6em 0;
+  padding: 9em 0 9em 0;
 
   p {
-    margin: 1em 0 1em 0;
+    margin: 2em 0 2em 0;
   }
 }
 h1 {
   @include header-style;
   font-size: 3.7em;
+  font-weight: normal;
+}
+h2 {
+  @include header-style;
+  font-size: 2em;
   font-weight: normal;
 }
 nav {
@@ -63,6 +68,14 @@ nav a {
 }
 .active-link {
   color: $action-color;
+}
+.works-list {
+  margin: 2em 0 0 0;
+  list-style-type: none;
+
+  li {
+    padding-bottom: 2em;
+  }
 }
 .wrapper {
   margin: 0 auto 0 auto;
