--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -63,6 +63,29 @@ nav a {
   padding-left: 1em;
   display: inline-block;
 }
+section[role="main"] {
+  li a {
+    text-decoration: none;
+    color: $primary-color;
+  }
+}
+footer {
+  padding: 6em 0 2em 0;
+  ul {
+    list-style-type: none;
+    display: inline-flex;
+
+    a {
+    text-decoration: none;
+    color: $primary-color;
+    padding-right: 1em;
+    }
+    
+  }
+  p {
+    text-align: right;
+  }
+}
 .name {
   font-size: 1.3em; // Error here. Supposed to put 1.9em but blows up size???
 }
