--- a/_sass/styles.css
+++ b/_sass/styles.css
@@ -1319,13 +1319,12 @@ section[role="main"] li a {
 footer {
   padding: 6em 0 2em 0; }
   footer ul {
-    list-style-type: none; }
-    footer ul li {
-      display: inline-block; }
-      footer ul li a {
-        text-decoration: none;
-        color: #624A73;
-        padding-right: 1em; }
+    list-style-type: none;
+    display: inline-flex; }
+    footer ul a {
+      text-decoration: none;
+      color: #624A73;
+      padding-right: 1em; }
   footer p {
     text-align: right; }
 
