--- a/_sass/styles.css
+++ b/_sass/styles.css
@@ -1281,6 +1281,9 @@ header {
   color: #624A73;
   text-transform: uppercase;
   padding-top: 2em; }
+  header p a {
+    text-decoration: none;
+    color: #624A73; }
 
 section[role="summary"] {
   padding: 9em 0 9em 0; }
@@ -1311,20 +1314,26 @@ nav a {
   color: #624A73;
   padding-left: 1em;
   display: inline-block; }
+  nav a:hover {
+    color: #747D8F; }
 
 section[role="main"] li a {
   text-decoration: none;
-  color: #624A73; }
+  color: #404952; }
+  section[role="main"] li a:hover {
+    color: #50AD9B; }
 
 footer {
-  padding: 6em 0 2em 0; }
+  padding: 9em 0 2em 0; }
   footer ul {
     list-style-type: none;
     display: inline-flex; }
     footer ul a {
       text-decoration: none;
-      color: #624A73;
+      color: #404952;
       padding-right: 1em; }
+      footer ul a:hover {
+        color: #747D8F; }
   footer p {
     text-align: right; }
 
