--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -36,6 +36,11 @@ body {
 header {
   @include header-style;
   padding-top: 2em;
+
+  p a {
+    text-decoration: none;
+    color: $primary-color;
+  }
 }
 section[role="summary"] {
   padding: 9em 0 9em 0;
@@ -62,32 +67,43 @@ nav a {
   color: $primary-color;
   padding-left: 1em;
   display: inline-block;
+
+  &:hover {
+    color: $alt-copy-color;
+  }
 }
 section[role="main"] {
   li a {
     text-decoration: none;
-    color: $primary-color;
+    color: $copy-color;
+
+    &:hover {
+      color: $action-color;
+    }
   }
 }
 footer {
-  padding: 6em 0 2em 0;
+  padding: 9em 0 2em 0;
   ul {
     list-style-type: none;
     display: inline-flex;
 
     a {
     text-decoration: none;
-    color: $primary-color;
+    color: $copy-color;
     padding-right: 1em;
+
+      &:hover {
+      color: $alt-copy-color;
+      }
     }
-    
   }
   p {
     text-align: right;
   }
 }
 .name {
-  font-size: 1.3em; // Error here. Supposed to put 1.9em but blows up size???
+  font-size: 1.3em;
 }
 .active-link {
   color: $action-color;
